--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
    <script src="fetch.js"></script>
+   <script src="synth.js"></script>
 </head>
 <body>
    <input id="auth" type="text">
