--- a/index.html
+++ b/index.html
@@ -12,4 +12,7 @@
    <a href="#" onclick="FETCH.query( document.querySelector('#query').value )">query</a>
 
 </body>
+   <script>
+      //window.open('https://www.freesound.org/apiv2/oauth2/authorize?client_id=' + FETCH.clientId + '&response_type=code', 'Window yo', 'width=400,height=300');
+   </script>
 </html>
