--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 </body>
    <script>
       //window.open('https://www.freesound.org/apiv2/oauth2/authorize?client_id=' + FETCH.clientId + '&response_type=code', 'Window yo', 'width=400,height=300');
+      SYNTH.init();
    </script>
 </html>
