--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <link rel="stylesheet" href="bower_components/knobjs/knobjs.css"></link>
+   <script src="bower_components/knobjs/knob.min.js"></script>
 </head>
 <body>
-   <input id="auth" type="text">
-   <a href="#" onclick="FETCH.authenticate( document.querySelector('#auth').value )">authenticate</a>
+      <input id="auth" type="text">
+      <a href="#" onclick="FETCH.authenticate( document.querySelector('#auth').value )">authenticate</a>
 
-   <br>
-   <input id="query" type="text">
-   <a href="#" onclick="FETCH.query( document.querySelector('#query').value )">query</a>
+   <div style="position: relative; height: 100px;">
+      <button id="query-0">query</button>
+      <button id="init-0">init locally</button>
+      <input id="search-0" type="text">
+      <canvas id="canvas-0" width=800 height=100 style="position: absolute; top: 0; left: 500px;"></canvas>
+      <canvas id="canvas-0b" width=800 height=100 style="position: absolute; top: 0; left: 500px;"></canvas>
+   </div>
+   <div style="position: relative; height: 100px;">
+      <button id="query-1">query</button>
+      <button id="init-1">init locally</button>
+      <input id="search-1" type="text">
+      <canvas id="canvas-1" width=800 height=100 style="position: absolute; top: 0; left: 500px;"></canvas>
+      <canvas id="canvas-1b" width=800 height=100 style="position: absolute; top: 0; left: 500px;"></canvas>
+   </div>
+   <div style="position: relative; height: 100px;">
+      <button id="query-2">query</button>
+      <button id="init-2">init locally</button>
+      <input id="search-2" type="text">
+      <canvas id="canvas-2" width=800 height=100 style="position: absolute; top: 0; left: 500px;"></canvas>
+      <canvas id="canvas-2b" width=800 height=100 style="position: absolute; top: 0; left: 500px;"></canvas>
+   </div>
+   <div style="position: relative; height: 100px;">
+      <button id="query-3">query</button>
+      <button id="init-3">init locally</button>
+      <input id="search-3" type="text">
+      <canvas id="canvas-3" width=800 height=100 style="position: absolute; top: 0; left: 500px;"></canvas>
+      <canvas id="canvas-3b" width=800 height=100 style="position: absolute; top: 0; left: 500px;"></canvas>
+   </div>
 
 </body>
    <script src="reverb.js"></script>
@@ -16,7 +43,49 @@
    <script src="fetch.js"></script>
    <script src="synth.js"></script>
    <script>
-      window.open('https://www.freesound.org/apiv2/oauth2/authorize?client_id=' + FETCH.clientId + '&response_type=code', 'Window yo', 'width=400,height=300');
+      //window.open('https://www.freesound.org/apiv2/oauth2/authorize?client_id=' + FETCH.clientId + '&response_type=code', 'Window yo', 'width=400,height=300');
       //SYNTH.init('cool');
+
+      for(var i = 0; i < 4; i++) {
+         document.querySelector('#query-' + i).onclick = function() { 
+            SYNTH.queryVoice(document.querySelector('#search-0').value, i); 
+         }
+         
+         var initVoice = function(idx) { 
+            return function() {
+               SYNTH.initVoice(idx);
+            }
+         };
+
+         document.querySelector('#init-' + i).onclick = initVoice(i);
+         
+         var MIN_GRAINSIZE = 0.025;
+         var MIN_GRAINSIZE_CUBEROOT = 0.292401;
+
+         var div = document.querySelector('#query-' + i).parentNode;
+         var knob = document.createElement('x-knobjs-knob');
+         knob.setAttribute('id', 'knob-grainsize-' + i);
+         knob.setAttribute('min', MIN_GRAINSIZE_CUBEROOT);
+         knob.setAttribute('max', .9);
+         var knob2 = document.createElement('x-knobjs-knob');
+         knob2.setAttribute('id', 'knob-walkspeed-' + i);
+         knob2.setAttribute('min', -1);
+         knob2.setAttribute('max', 1);
+         div.appendChild(knob);
+         div.appendChild(knob2);
+
+      }
+
+
+      window.onkeydown = function(evt) {
+         switch (evt.keyCode) {
+            case (65): SYNTH.keyDown(0);break;
+            case (83): SYNTH.keyDown(1);break;
+            case (68): SYNTH.keyDown(2);break;
+            case (70): SYNTH.keyDown(3);break;
+            default: console.log(evt.keyCode);
+         }
+      }
+
    </script>
 </html>
