--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
       var walkSpeedKnobs = [];
       for(var i = 0; i < 4; i++) {
 
-         document.querySelector('#query-' + i).onclick = initVoice(i, true);
          
          var initVoice = function(idx, isQuery) {
             return function() {
@@ -86,13 +85,15 @@
                grainSizeKnobs[idx].style.display = 'inline-block';
 
                if (isQuery) {
-                  SYNTH.queryVoice(document.querySelector('#search-0').value, idx); 
+                  SYNTH.queryVoice(document.querySelector('#search-' + idx).value, idx); 
                }
                else {
                   SYNTH.initVoice(idx);
                }
             };
          }
+
+         document.querySelector('#query-' + i).onclick = initVoice(i, true);
 
          document.querySelector('#init-' + i).onclick = initVoice(i);
          
